--- a/drf_auth/.env
+++ b/drf_auth/.env
@@ -1,8 +1,8 @@
-DEBUG=on
+DEBUG=off
 SECRET_KEY=*=p)%de(s_gm#0x$_w39lhr)c+m)*vpbvj64+q-=50hk_72nwa
 DATABASE_NAME=postgres
 DATABASE_USER=postgres
-DATABASE_PASSWORD=put-real-db-password-here
+DATABASE_PASSWORD=postgres
 DATABASE_HOST=db
 DATABASE_PORT=5432
 ALLOWED_HOSTS=localhost,127.0.0.1,0.0.0.0
