--- a/drf_auth/.env
+++ b/drf_auth/.env
@@ -5,4 +5,4 @@ DATABASE_USER=postgres
 DATABASE_PASSWORD=postgres
 DATABASE_HOST=db
 DATABASE_PORT=5432
-ALLOWED_HOSTS=localhost,127.0.0.1,0.0.0.0
+ALLOWED_HOSTS=localhost,127.0.0.1,0.0.0.0,.new-gh.com,new-gh.herokuapp.com
