--- a/drf_auth/.env
+++ b/drf_auth/.env
@@ -5,4 +5,5 @@ DATABASE_USER=postgres
 DATABASE_PASSWORD=postgres
 DATABASE_HOST=db
 DATABASE_PORT=5432
-ALLOWED_HOSTS=localhost,127.0.0.1,0.0.0.0,.new-gh.com,new-gh.herokuapp.com
+ALLOWED_HOSTS=localhost,127.0.0.1,0.0.0.0,.new-api-gha.com,new-api-gha.herokuapp.com
+DJANGO_ALLOWED_HOSTS=.new-api-gha.com,new-api-gha.herokuapp.com
